Fix clipping when source authors are too long

--- a/frontend/client/src/components/source.less
+++ b/frontend/client/src/components/source.less
@@ -35,6 +35,13 @@
         white-space: nowrap;
         height: @top-details-height;
 
+        .detail-group {
+            width: 0;
+            flex: 1;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
         .detail-group-placeholder {
             &::before {
                 content: '\00a0';
@@ -56,8 +63,6 @@
         .source-short-authors {
             margin-left: 0.5em;
             opacity: 0.7;
-            overflow: hidden;
-            text-overflow: ellipsis;
 
             .author-item {
                 &::after {
